mapped to restTemplate.