@@ -4,11 +4,12 @@ import com.taisiia.gitApp.git.dto.Branch;
 import com.taisiia.gitApp.git.dto.GitHubRepo;
 import com.taisiia.gitApp.git.dto.GitRepositoryDto;
 import com.taisiia.gitApp.git.exception.GitHubException;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.*;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestClient;
+import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestClientException;
+import org.springframework.web.client.RestTemplate;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -20,12 +21,15 @@ import java.util.concurrent.ExecutorService;
 public class GitHubService {
 
 
-    private final RestClient restClient;
+    private final RestTemplate restTemplate;
 
     private final ExecutorService executor;
 
-    public GitHubService(RestClient restClient, ExecutorService executor) {
-        this.restClient = restClient;
+    @Value("${github.api.url}")
+    private String baseUrl;
+
+    public GitHubService(RestTemplate restTemplate, ExecutorService executor) {
+        this.restTemplate = restTemplate;
         this.executor = executor;
     }
 
@@ -48,42 +52,59 @@ public class GitHubService {
     }
 
     public List<GitHubRepo> getGitHubRepoList(String userName) {
-        try {
-            GitHubRepo[] repos = restClient
-                    .get()
-                    .uri("/users/{username}/repos", userName)
-                    .accept(MediaType.APPLICATION_JSON)
-                    .retrieve()
-                    .onStatus(HttpStatus.NOT_FOUND::equals, (req, res) -> {
-                        throw new GitHubException(HttpStatus.NOT_FOUND.value(), "User not found");
-                    })
-                    .onStatus(HttpStatus.UNAUTHORIZED::equals, (req, res) -> {
-                        throw new GitHubException(HttpStatus.UNAUTHORIZED.value(), "Unauthorized access");
-                    })
-                    .body(GitHubRepo[].class);
+        String url = baseUrl + "/users/{username}/repos";
 
-            return Objects.isNull(repos) ? Collections.emptyList() : Arrays.stream(repos).filter(repo -> !repo.fork()).toList();
+        HttpHeaders headers = new HttpHeaders();
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
+        HttpEntity<Void> entity = new HttpEntity<>(headers);
+
+        try {
+            ResponseEntity<GitHubRepo[]> response = restTemplate.exchange(
+                    url,
+                    HttpMethod.GET,
+                    entity,
+                    GitHubRepo[].class,
+                    userName
+            );
+
+            GitHubRepo[] repos = response.getBody();
+            return Objects.isNull(repos) ? Collections.emptyList() : Arrays.stream(repos)
+                    .filter(repo -> !repo.fork())
+                    .toList();
+
+        } catch (HttpClientErrorException.NotFound e) {
+            throw new GitHubException(HttpStatus.NOT_FOUND.value(), "User not found");
+        } catch (HttpClientErrorException.Unauthorized e) {
+            throw new GitHubException(HttpStatus.UNAUTHORIZED.value(), "Unauthorized access");
         } catch (RestClientException e) {
             throw new GitHubException(HttpStatus.INTERNAL_SERVER_ERROR.value(), "GitHub API error: " + e.getMessage());
         }
     }
 
     public List<Branch> getBranchList(String owner, String repo) {
+        String url = baseUrl + "/repos/{owner}/{repo}/branches";
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
+        HttpEntity<Void> entity = new HttpEntity<>(headers);
+
         try {
-            Branch[] branches = restClient
-                    .get()
-                    .uri("/repos/{owner}/{repo}/branches", owner, repo)
-                    .accept(MediaType.APPLICATION_JSON)
-                    .retrieve()
-                    .onStatus(HttpStatus.NOT_FOUND::equals, (req, res) -> {
-                        throw new GitHubException(HttpStatus.NOT_FOUND.value(), "Repository or branches not found");
-                    })
-                    .onStatus(HttpStatus.UNAUTHORIZED::equals, (req, res) -> {
-                        throw new GitHubException(HttpStatus.UNAUTHORIZED.value(), "Unauthorized access");
-                    })
-                    .body(Branch[].class);
+            ResponseEntity<Branch[]> response = restTemplate.exchange(
+                    url,
+                    HttpMethod.GET,
+                    entity,
+                    Branch[].class,
+                    owner,
+                    repo
+            );
+
+            Branch[] branches = response.getBody();
             return Objects.isNull(branches) ? Collections.emptyList() : List.of(branches);
 
+        } catch (HttpClientErrorException.NotFound e) {
+            throw new GitHubException(HttpStatus.NOT_FOUND.value(), "Repository or branches not found");
+        } catch (HttpClientErrorException.Unauthorized e) {
+            throw new GitHubException(HttpStatus.UNAUTHORIZED.value(), "Unauthorized access");
         } catch (RestClientException e) {
             throw new GitHubException(HttpStatus.INTERNAL_SERVER_ERROR.value(), "GitHub API error: " + e.getMessage());
         }
